@@ -7,6 +7,8 @@ v0.3.9-dev, 2012-08-17
 Version 0.3.9 (under dev!)
 --------------------------
 
+* core: fix color of long lines (displayed on more than one line on screen)
+  under FreeBSD (bug #36999)
 * core: add mouse bindings ctrl+wheel up/down to scroll horizontally buffers
   with free content
 * core: return error string to callback of hook_connect if getaddrinfo fails in
